--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       </head>
       
     <body>
-        <h1>This is a header</h1>
+        <h1>Nathan wants head
+        </h1>
       </body>
 </html>
