--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       </head>
       
     <body>
-        <h1>Nathan wants head
+        <h1>This is a header
         </h1>
       </body>
 </html>
