--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Jill</title>
+      <title>Webpage</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="styles.css">
       </head>
       
     <body>
-        <h1>This is a header
-        </h1>
+        <h1>This is a header for the Webpage</h1>
+        
       </body>
 </html>
