--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Hisoka</title>
+      <title>This is a Webpage</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="styles.css">
       </head>
-      
+    <h1>Welcome to the Webpage</h1>
+    <p>It's just for fun really :)</p>
     <body>
-        <h1>Why Hisoka is the best character from HUNTERXHUNTER</h1>
-        <img src="https://i.ytimg.com/vi/hm-mjjc1LoY/maxresdefault.jpg" width="500">
+     
       </body>
 </html>
